Fix compile, fix bug with types

--- a/docs/api/vec4i.mdx
+++ b/docs/api/vec4i.mdx
@@ -147,7 +147,7 @@ id: Vec4i
 
 ### Vec4 __mul(Vec4i, Vec4) {#Vec4-mul-Vec4i-Vec4}
 
-### Vec4i __mul(Vec4i, classTMatrix4<int>) {#Vec4i-mul-Vec4i-classTMatrix4int}
+### Vec4i __mul(Vec4i, Mat4) {#Vec4i-mul-Vec4i-Mat4}
 
 ### Vec4i __mul(Vec4i, integer) {#Vec4i-mul-Vec4i-integer}
 
