Some documentation updates, auto copy api files

--- a/docs/api/collision.mdx
+++ b/docs/api/collision.mdx
@@ -14,16 +14,16 @@ id: Collision
 ## Methods
 
 ### table Raycast() {#table-Raycast}
-use rayPos, rayDir, returns table of Hit values or empty table for no hit
+Use rayPos, rayDir, returns table of Hit values or empty table for no hit
 
 ### table Raycast(Vec3, Vec3) {#table-Raycast-Vec3-Vec3}
-use rayPos, rayDir, returns table of Hit values or empty table for no hit
+Use rayPos, rayDir, returns table of Hit values or empty table for no hit
 
 ### table GetOverlap() {#table-GetOverlap}
-checks collision between shape and geometry passed by filter
+Checks collision between shape and geometry passed by filter
 
 ### table GetOverlap(Shape) {#table-GetOverlap-Shape}
-checks collision between shape and geometry passed by filter
+Checks collision between shape and geometry passed by filter
 
 ## Properties
 
