--- a/docs/api/examples/Voxel-Edits.mdx
+++ b/docs/api/examples/Voxel-Edits.mdx
@@ -1,6 +1,6 @@
 # Voxel Edits
 
-This example script draws a line of voxels as the object its attached to moves around. To try it select the object in the hierachy and move it with the transformation gizmos.
+This example script draws a line of voxels as the object its attached to moves around. To try it select the object in the hierarchy and move it with the transformation gizmos.
 Since its not needed on client this script only runs on the server side.
 
 Currently the script creates voxels in the the global static voxel database. Scripts can also edit individual dynamic voxel data objects.
