--- a/docs/api/shape.mdx
+++ b/docs/api/shape.mdx
@@ -5,6 +5,14 @@ id: Shape
 `Client`
 `Server`
 
+Shapes for collisions and voxel operations
+
+* [Box](Box)
+* [Sphere](Sphere)
+* [Capsule](Capsule)
+* [Cylinder](Cylinder)
+* [Polygon](Polygon)
+
 ## Properties
 
 ### Vec3 pos {#Vec3-pos}
