--- a/docs/manual/29-shortcuts.mdx
+++ b/docs/manual/29-shortcuts.mdx
@@ -4,16 +4,28 @@
 
 * `Ctrl + F` See list of quick actions
 * `Ctrl + R` Reset lua state
+* `Ctrl + Z` Undo (limited to some actions)
+* `Ctrl + Y` Redo
 
-## Hierachy
+## Hierarchy
 
-* `F` Focus selected object in hierachy
-* `Esc` Deselect object in hierachy
+* `F` Focus selected object in hierarchy
+* `Esc` Deselect object in hierarchy
 * `Delete` Delete selected object
 * `Ctrl` Move or rotate selected object in fixed steps
+* `Ctrl + D` Duplicate
 
 ## Camera
 
 * `Shift` Move faster
 * `Q`/`E` Move camera on alternative axis
+
+## Shape selection
+
+* `V` Paint
+* `C` Fill
+* `R` Remove
+* `Ctrl + C` Copy
+* `Ctrl + V` Paste
+* `Ctrl + X` Cut
 
