--- a/docs/api/voxelRenderer.mdx
+++ b/docs/api/voxelRenderer.mdx
@@ -35,6 +35,6 @@ Draw an outline around this object
 Render with a tint color
 
 ### boolean receiveTransform {#boolean-receiveTransform}
-Receive transform(pos, rot scale) from server. By default this is true. 
+Receive transform(pos, rot scale) to render with from server. By default this is true. 
 If you set this to false, you will need to manually set the transform of the object on the client side.
 This is useful for making objects respond immediately if something happened on the client side i.e. input
