Fix wrong replace

--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -182,7 +182,7 @@ Disconnected
 
 ### integer GetCurrentUIActionID() {#integer-GetCurrentUIActionID}
 
-### nil SetIntersectionTinteger(Vec4) {#nil-SetIntersectionTinteger-Vec4}
+### nil SetIntersectionTint(Vec4) {#nil-SetIntersectionTint-Vec4}
 
 ### nil SetIntersectionBox(Vec3, Quat, Vec3) {#nil-SetIntersectionBox-Vec3-Quat-Vec3}
 
@@ -267,7 +267,7 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### nil ClearEntityPath() {#nil-ClearEntityPath}
 
-### nil AddEntityPathWaypointeger() {#nil-AddEntityPathWaypointeger}
+### nil AddEntityPathWaypoint() {#nil-AddEntityPathWaypoint}
 
 ### nil TakeScreenshot(string, boolean) {#nil-TakeScreenshot-string-boolean}
 
