--- a/docs/api/voxelEdit.mdx
+++ b/docs/api/voxelEdit.mdx
@@ -19,7 +19,7 @@ id: VoxelEdit
 Flush() adds a special operation in the queue, which waits for all running ops to finish.
 If we had flush after each op, it would eliminate all multithreaded processing.
 
-### nil Painteger() {#nil-Painteger}
+### nil Paint() {#nil-Paint}
 
 ### nil Add() {#nil-Add}
 
