Update api, move some docs

--- a/docs/api/capsule.mdx
+++ b/docs/api/capsule.mdx
@@ -11,5 +11,7 @@ id: Capsule
 
 ### Capsule(Vec3, Vec3, number, number) {#Capsule-Vec3-Vec3-number-number}
 
+### Capsule(Vec3, Vec3, number) {#Capsule-Vec3-Vec3-number}
+
 ### Capsule(Vec3, Vec3) {#Capsule-Vec3-Vec3}
 
