--- a/docs/api/cylinder.mdx
+++ b/docs/api/cylinder.mdx
@@ -11,5 +11,7 @@ id: Cylinder
 
 ### Cylinder(Vec3, Vec3, number, number) {#Cylinder-Vec3-Vec3-number-number}
 
+### Cylinder(Vec3, Vec3, number) {#Cylinder-Vec3-Vec3-number}
+
 ### Cylinder(Vec3, Vec3) {#Cylinder-Vec3-Vec3}
 
