--- a/docs/api/enums/blendMode.mdx
+++ b/docs/api/enums/blendMode.mdx
@@ -3,6 +3,10 @@ title: BlendMode
 id: BlendMode
 ---
 
+
+Used by [VoxelEdit](../VoxelEdit#BlendMode-blendMode)
+
+
 ## Properties
 
 | Name | Description |
