--- a/docs/manual/10-getting-started/29-shortcuts.mdx
+++ b/docs/manual/10-getting-started/29-shortcuts.mdx
@@ -12,7 +12,7 @@
 * `F` Focus selected object in hierarchy
 * `Esc` Deselect object in hierarchy
 * `Delete` Delete selected object
-* `Ctrl` Move or rotate selected object in fixed steps
+* `Hold Ctrl` Toggle between snapping and non snapping transform movement 
 * `Ctrl + D` Duplicate
 
 ## Camera
