--- a/docs/api/config.mdx
+++ b/docs/api/config.mdx
@@ -5,6 +5,8 @@ id: Config
 `Client`
 `Server`
 
+Save and load values for this client
+
 ## Methods
 
 ### nil SetInt(string, integer) {#nil-SetInt-string-integer}
