--- a/docs/api/shape.mdx
+++ b/docs/api/shape.mdx
@@ -5,8 +5,9 @@ id: Shape
 `Client`
 `Server`
 
-Shapes for collisions and voxel operations
+For [voxel edits](VoxelEdit#userdata-shape), [collisions](Collision#Shape-shape) and [rendering](MeshData#nil-AddShape-Shape-Vec4)
 
+All shapes inherit from this class. It is not meant to be instantiated directly.
 * [Box](Box)
 * [Sphere](Sphere)
 * [Capsule](Capsule)
