--- a/docs/manual/10-getting-started/80-framerate-tips copy.mdx
+++ b/docs/manual/10-getting-started/80-framerate-tips copy.mdx
@@ -1,6 +1,12 @@
+---
+id: framerate-tips
+slug: /framerate-tips
+---
+
+
 # Framerate Tips
 
 * If you are using a laptop with both dedicated and integrated GPU disable the integrated gpu for your browser
-* In the future we will release a downloadable standalone client that will perfom much better
+* In the future we will release a downloadable standalone client that will perform much better
 * Contact us on discord for more help 
 
