--- a/docs/api/1-intro.mdx
+++ b/docs/api/1-intro.mdx
@@ -11,7 +11,7 @@ If you have any questions or feedback please let us know in the discord
 ## Important classes
 * [Scene](Scene)
 * [Object](Object)
-* [Input](input)
+* [Input](Input)
 * [VoxelEdit](VoxelEdit)
 * [ScriptInstance](ScriptInstance)
 * [Client](Client)
