--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -1,6 +1,6 @@
 ---
 title: Client
-id: client
+id: Client
 ---
 `Client`
 :::info Client Only
@@ -203,7 +203,7 @@ Disconnected
 ### Vec2 GetViewportSize() {#Vec2-GetViewportSize}
 
 ### CommandLine GetCommandLine() {#CommandLine-GetCommandLine}
-Returns [`CommandLine`](/api/commandLine)
+Returns [`CommandLine`](./commandLine.mdx)
 
 ### Vec4 GetBGColor() {#Vec4-GetBGColor}
 
