--- a/docs/api/1-intro.mdx
+++ b/docs/api/1-intro.mdx
@@ -1,12 +1,15 @@
 # Intro
 
 :::info
-
 All bindings are currently in a testing stage and may change in the future. 
-
 :::
 
-If you have any questions or feedback please let us know in the discord
+In addition to those bindings listed here there are also additional global functions defined by other lua scripts such as `util:schedule()` or `events.keyDown.addListener()`
+Currently, you can find out more about these in VSCode by right clicking them, selecting `Go to Definition` and browsing the files you find there.
+
+If you have any questions or feedback please let us know in the discord.
+
+![Panel](/img/editor-basics/concepts.gif)
 
 ## Important classes
 * [Scene](Scene)
