--- a/docs/api/component.mdx
+++ b/docs/api/component.mdx
@@ -5,6 +5,17 @@ id: Component
 `Client`
 `Server`
 
+All components inherit from this class. It is not meant to be instantiated directly.
+* [Transform](Transform)
+* [Script](Script)
+* [Camera](Camera)
+* [VoxelData](VoxelData)
+* [StaticVoxelData](StaticVoxelData)
+* [VoxelRenderer](VoxelRenderer)
+* [MeshData](MeshRenderer)
+* [MeshRenderer](MeshRenderer)
+* [Sky](Sky)
+
 ## Properties
 
 ### Object object {#Object-object}
