--- a/docs/api/voxelRenderer.mdx
+++ b/docs/api/voxelRenderer.mdx
@@ -12,6 +12,7 @@ id: VoxelRenderer
 ## Methods
 
 ### number, number GetBounds() {#number-number-GetBounds}
+World position and size of AABB (axis-aligned bounding box) of the object
 
 ## Properties
 
