--- a/docs/api/commandLine.mdx
+++ b/docs/api/commandLine.mdx
@@ -15,7 +15,11 @@ id: CommandLine
 
 ### string GetOption(string, string) {#string-GetOption-string-string}
 
+### Vec2 GetOptionVec2(string, Vec2) {#Vec2-GetOptionVec2-string-Vec2}
+
 ### Vec3 GetOptionVec3(string, Vec3) {#Vec3-GetOptionVec3-string-Vec3}
+
+### Vec4 GetOptionVec4(string, Vec4) {#Vec4-GetOptionVec4-string-Vec4}
 
 ### table GetAll(CommandLine) {#table-GetAll-CommandLine}
 
