--- a/docs/api/sky.mdx
+++ b/docs/api/sky.mdx
@@ -5,6 +5,10 @@ id: Sky
 `Client`
 `Server`
 
+## Methods
+
+### nil LoadSkyTexture(string, TextureType, Vec4, number) {#nil-LoadSkyTexture-string-TextureType-Vec4-number}
+
 ## Properties
 
 ### Object object {#Object-object}
@@ -26,6 +30,8 @@ id: Sky
 ### Vec3 rayleighCoeff {#Vec3-rayleighCoeff}
 
 ### number mieCoeff {#number-mieCoeff}
+
+### number yRotationAngle {#number-yRotationAngle}
 
 ### boolean render {#boolean-render}
 
