--- a/docs/api/voxelDataResource.mdx
+++ b/docs/api/voxelDataResource.mdx
@@ -19,7 +19,7 @@ id: VoxelDataResource
 save voxel data in AM file
 second parameter controls if file will be overwritten
 
-### number, number GetBounds() {#number-number-GetBounds}
+### Vec3, Vec3 GetLocalBounds() {#Vec3-Vec3-GetLocalBounds}
 get center (in local space) and dimensions of the voxel data
 
 ### userdata Duplicate() {#userdata-Duplicate}
