--- a/docs/api/voxelRenderer.mdx
+++ b/docs/api/voxelRenderer.mdx
@@ -11,7 +11,7 @@ id: VoxelRenderer
 
 ## Methods
 
-### number, number GetBounds() {#number-number-GetBounds}
+### Vec3, Vec3 GetBounds() {#Vec3-Vec3-GetBounds}
 World position and size of AABB (axis-aligned bounding box) of the object
 
 ## Properties
