--- a/docs/api/voxelDB.mdx
+++ b/docs/api/voxelDB.mdx
@@ -164,7 +164,8 @@ it should be in range 1-8
 
 ### table GetUsedLayers() {#table-GetUsedLayers}
 
-### number, number GetBounds() {#number-number-GetBounds}
+### Vec3, Vec3 GetBounds() {#Vec3-Vec3-GetBounds}
+World position and size of AABB (axis-aligned bounding box) of the static voxel data
 
 ## Properties
 
