--- a/docs/api/enums/blendMode.mdx
+++ b/docs/api/enums/blendMode.mdx
@@ -3,9 +3,8 @@ title: BlendMode
 id: BlendMode
 ---
 
-
 Used by [VoxelEdit](../VoxelEdit#BlendMode-blendMode)
-
+See a list of explanations [here](https://photoshoptrainingchannel.com/blending-modes-explained/#normal-blending-modes).
 
 ## Properties
 
