--- a/docs/api/input.mdx
+++ b/docs/api/input.mdx
@@ -4,6 +4,13 @@ id: Input
 ---
 `Client`
 `Server`
+:::info Client Only
+Input from this class can only be read on the client side.
+:::
+
+Simple way to check a clients input.
+For more advanced use we recommend receive input via the [events system](../manual/scripting/examples/Input) 
+because it respects the order in which the input was received and other benefits. 
 
 ## Methods
 
