--- a/docs/api/overlap.mdx
+++ b/docs/api/overlap.mdx
@@ -5,6 +5,8 @@ id: Overlap
 `Client`
 `Server`
 
+Returned by [`Overlap()` functions]](Collision#table-GetOverlap).
+
 ## Properties
 
 ### Vec3 center {#Vec3-center}
