--- a/docs/api/script.mdx
+++ b/docs/api/script.mdx
@@ -5,6 +5,8 @@ id: Script
 `Client`
 `Server`
 
+Script component. Not to be confused with the actual [lua table instance](ScriptInstance) of the script referred to as `self`.
+
 ## Methods
 
 ### integer RPC(...) {#integer-RPC}
