--- a/docs/api/scriptInstance.mdx
+++ b/docs/api/scriptInstance.mdx
@@ -6,7 +6,7 @@ id: ScriptInstance
 `Server`
 
 The lua table referred to in a script with `self`
-
+The [`Script` component](Script) attached to the object can be found via `self.component`.
 
 ```lua
 local self = {}
