--- a/docs/api/staticVoxelData.mdx
+++ b/docs/api/staticVoxelData.mdx
@@ -5,6 +5,8 @@ id: StaticVoxelData
 `Client`
 `Server`
 
+Every scene has only **one** static voxel data and can have multiple dynamic voxel data. The static voxel data is used for the world and can not be moved.
+
 ## Properties
 
 ### Object object {#Object-object}
