--- a/docs/api/voxelRenderer.mdx
+++ b/docs/api/voxelRenderer.mdx
@@ -5,6 +5,8 @@ id: VoxelRenderer
 `Client`
 `Server`
 
+The data will only render if the object also has a `VoxelData` component with data assigned.
+
 ## Metamethods
 
 ### boolean __eq(VoxelRenderer, VoxelRenderer) {#boolean-eq-VoxelRenderer-VoxelRenderer}
