--- a/docs/api/voxelEdit.mdx
+++ b/docs/api/voxelEdit.mdx
@@ -5,7 +5,11 @@ id: VoxelEdit
 `Client`
 `Server`
 
-Use this class to create voxel edits. Currently voxel edits can only be done on the server side.
+:::info Server Only
+ Currently voxel edits can only be done on the server side.
+:::
+
+Use this class to create voxel edits.
 
 Use this class by first creating a `VoxelEdit` object, then setting the properties such as `shape` and `color` and finally calling one of the edit methods:
 * `Paint()`
