--- a/docs/manual/10-getting-started/29-shortcuts.mdx
+++ b/docs/manual/10-getting-started/29-shortcuts.mdx
@@ -2,10 +2,10 @@
 
 ## General
 
-* `Ctrl + F` See list of quick actions
-* `Ctrl + R` Reset lua state
 * `Ctrl + Z` Undo (limited to some actions)
 * `Ctrl + Y` Redo
+* `Ctrl + R` Reset lua state
+* `Ctrl + K` See list of quick actions
 
 ## Hierarchy
 
